baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__recursive_class.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.TreeNode {
  value: string
  children: user.TreeNode[]
}
function user.TreeNode.to_json(self: user.TreeNode) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "value": self.value.to_json(), "children": self.children.to_json() } : map<string, baml.json.json>
}
function user.TreeNode.from_json(j: baml.json.json) -> user.TreeNode throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.TreeNode
}
class user.TreeNode$stream {
  value: null | string
  children: user.TreeNode$stream[]
}
