baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__stream_annotation_semantics_matrix.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.WithDone {
  name: string
  age: int
}
class user.AtomicPoint {
  x: float
  y: float
}
class user.DoneReferences {
  point: user.AtomicPoint
}
class user.WithMustExist {
  gpa: float
  name: string
}
class user.MustExistEducation {
  school: string
  year: int
}
class user.MustExistReferences {
  education: user.MustExistEducation
  educations: user.MustExistEducation[]
}
class user.Combined {
  id: string
  name: string
  age: int
  score: float
}
class user.WithDone$stream {
  name: string
  age: int | null
}
class user.AtomicPoint$stream {
  x: float | null
  y: float | null
}
class user.DoneReferences$stream {
  point: user.AtomicPoint$stream | null
}
class user.WithMustExist$stream {
  gpa: float
  name: string | null
}
class user.MustExistEducation$stream {
  school: string | null
  year: int | null
}
class user.MustExistReferences$stream {
  education: user.MustExistEducation$stream
  educations: user.MustExistEducation$stream[]
}
class user.Combined$stream {
  id: string
  name: string
  age: int
  score: float | null
}
