baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__stream_companion_preserves_generic_args_in_class_field.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.Box {
  value: T
}
class user.Container {
  inner: user.Box<int>
}
class user.Box$stream {
  value: null | T
}
class user.Container$stream {
  inner: null | user.Box$stream<int>
}
