baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__stream_done_and_not_null.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.Combined {
  id: string
  name: string
  age: int
  score: float
}
class user.Combined$stream {
  id: null | string
  name: null | string
  age: null | int
  score: null | float
}
