baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__stream_done_block_attr.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.AtomicPoint {
  x: float
  y: float
}
