baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__stream_done_field_keeps_type_as_is.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.WithDone {
  name: string
  age: int
}
class user.WithDone$stream {
  name: string
  age: null | int
}
