baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__stream_field_metadata_matrix.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.WithAlias {
  bar: string @alias("baz")
  count: int @alias("cnt")
}
class user.WithDesc {
  name: string @description("The name")
  age: int @description("Age in years")
}
class user.WithAlias$stream {
  bar: string | null @alias("baz")
  count: int | null @alias("cnt")
}
class user.WithDesc$stream {
  name: string @description("The name")
  age: int | null @description("Age in years")
}
