baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__stream_generic_argument_matrix.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.Box {
  value: T
}
class user.Container {
  inner: user.Box<int>
}
function user.GetBoxedInt(client: ai.Client | null = null, on_event: ((ai.events.Event) -> void throws __effect_param_0) | null = null) -> user.Box<int> throws never {
  ai.Agent.new(client = client, on_event = on_event).run(GetBoxedInt@spec()).value : user.Box<int>
}
function user.GetBoxedInt@spec() -> ai.FunctionSpec<user.Box<int>> throws never {
  ai.FunctionSpec { spec_name: "GetBoxedInt", args: map {  }, prompt_template: ( __spec_output_format: ai.OutputFormat) -> { ... }, toolbox: ai.tools.Toolbox.new([]), default_client: ai.clients.resolve(Dummy, (prefix: string, model: string) -> ai.Client? { ... }, ["openai", "openai-chat", "openai-images", "azure", "ollama", "openrouter", "anthropic", "google", "vertex", "bedrock", "ai-gateway-images", "claude-code"]) } : ai.FunctionSpec<user.Box<int>>
}
lambda user.GetBoxedInt@spec {
}
block user.GetBoxedInt@spec {
}
block user.GetBoxedInt@spec {
}
lambda user.GetBoxedInt@spec {
}
function user.GetBoxedInt@render_prompt() -> ai.Prompt throws never {
  GetBoxedInt@spec().prompt() : ai.Prompt
}
function user.GetBoxedInt@build_request(client: ai.Client | null = null) -> baml.http.Request throws never {
  GetBoxedInt@spec().build_request(client = client) : baml.http.Request
}
function user.GetBoxedInt@parse(json: string) -> user.Box<int> throws never {
  baml.sap.parse(json) : user.Box<int>
}
class user.Box$stream {
  value: T | null
}
class user.Container$stream {
  inner: user.Box$stream<int> | null
}
function user.GetBoxedInt@stream(client: ai.stream.StreamingClient | null = null, on_event: ((ai.events.Event) -> void throws __effect_param_0) | null = null) -> ai.stream.Stream<user.Box$stream<int> | null, user.Box<int>> throws never {
  ai.stream.from_spec<__effect_param_0>(GetBoxedInt@spec(), client = client, on_event = on_event) : ai.stream.Stream<user.Box$stream<int> | null, user.Box<int>>
}
