baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__stream_not_null_block_attr_on_referenced_class.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.NotNullEducation {
  school: string
  year: int
}
function user.NotNullEducation.to_json(self: user.NotNullEducation) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "school": self.school.to_json(), "year": self.year.to_json() } : map<string, baml.json.json>
}
function user.NotNullEducation.from_json(j: baml.json.json) -> user.NotNullEducation throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.NotNullEducation
}
class user.References {
  education: user.NotNullEducation
  educations: user.NotNullEducation[]
}
function user.References.to_json(self: user.References) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "education": self.education.to_json(), "educations": self.educations.to_json() } : map<string, baml.json.json>
}
function user.References.from_json(j: baml.json.json) -> user.References throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.References
}
class user.NotNullEducation$stream {
  school: null | string
  year: null | int
}
class user.References$stream {
  education: null | user.NotNullEducation$stream
  educations: user.NotNullEducation$stream[]
}
