baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__stream_not_null_field.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.WithNotNull {
  gpa: float
  name: string
}
function user.WithNotNull.to_json(self: user.WithNotNull) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "gpa": self.gpa.to_json(), "name": self.name.to_json() } : map<string, baml.json.json>
}
function user.WithNotNull.from_json(j: baml.json.json) -> user.WithNotNull throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.WithNotNull
}
class user.WithNotNull$stream {
  gpa: null | float
  name: null | string
}
